task block scrollbar on windows fixed

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -775,7 +775,7 @@
   border-width: 3px;
 }
 .rectangle-3 {
-  width: 875px;
+  width: 881px;
   height: 170px;
   position: absolute;
   overflow-y: scroll;
